[gd_scene load_steps=11 format=3 uid="uid://die5ohyuhiepk"]

[ext_resource type="Texture2D" uid="uid://bde6f6x3lab8f" path="res://assets/sprites/torch.png" id="1_5wsu8"]
[ext_resource type="Script" path="res://scripts/torchswing.gd" id="1_gjr8v"]
[ext_resource type="PackedScene" uid="uid://b7qa1k36e2hs6" path="res://assets/particles/flame_particle.tscn" id="2_fwp7p"]
[ext_resource type="Texture2D" uid="uid://lw5kabu6x2nf" path="res://assets/sprites/fire/spr_flamethrower_explosion-sheet.png" id="5_auvgo"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6n3k5"]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qhhgl"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(5.895, 28.545, 0)
angle_min = 90.0
angle_max = 90.0
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 64.0
initial_velocity_max = 64.0
gravity = Vector3(0, 0, 0)
damping_min = 32.0
damping_max = 32.0
scale_min = 0.35
scale_max = 0.5
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dkaf"]
size = Vector2(22.6667, 83.3333)

[sub_resource type="Animation" id="Animation_ax0xn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Torch/hitbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Torch/hitbox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hg5nn"]
resource_name = "swing"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, 3.92699, 3.14159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Torch/burning_slash:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Torch/flame_particle:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pivot/Torch/hitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pivot/Torch/hitbox:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8tyjt"]
_data = {
"RESET": SubResource("Animation_ax0xn"),
"swing": SubResource("Animation_hg5nn")
}

[node name="TorchSwing" type="Node2D"]
script = ExtResource("1_gjr8v")

[node name="pivot" type="Marker2D" parent="."]

[node name="Torch" type="Sprite2D" parent="pivot"]
position = Vector2(0, -67)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_5wsu8")

[node name="flame_particle" parent="pivot/Torch" instance=ExtResource("2_fwp7p")]
position = Vector2(0, -32)
emitting = false

[node name="burning_slash" type="GPUParticles2D" parent="pivot/Torch"]
material = SubResource("CanvasItemMaterial_6n3k5")
emitting = false
amount = 512
process_material = SubResource("ParticleProcessMaterial_qhhgl")
texture = ExtResource("5_auvgo")
lifetime = 2.0
randomness = 0.5

[node name="hitbox" type="Area2D" parent="pivot/Torch" groups=["swing"]]
monitoring = false
monitorable = false

[node name="shape" type="CollisionShape2D" parent="pivot/Torch/hitbox"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_3dkaf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8tyjt")
}
